# ufc-predictor

./: .gitignore  CLAUDE.md  DASHBOARD_IMPROVEMENTS.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
.streamlit/: config.toml
docs/: PROJECT_CONTEXT_UFC.md
notebooks/: 01_eda.ipynb  02_feature_checks.ipynb
scripts/: eval_models.py  plot_sniper_heatmap.py  predict.py  run_dashboard.sh  run_pipeline.py  train_model.py
src/ufc_predictor/: __init__.py  config.py
src/ufc_predictor/app/: Home.py  README.md  __init__.py  dashboard_old.py
src/ufc_predictor/app/components/: __init__.py  cards.py  styling.py
src/ufc_predictor/app/pages/: 1_Manual_Matchup.py  2_Strategy_Guide.py
src/ufc_predictor/data/: __init__.py  cleaning.py  ingest.py  upcoming.py  validation.py
src/ufc_predictor/evaluation/: __init__.py  backtest.py  compare.py  evaluate.py  metrics.py
src/ufc_predictor/features/: __init__.py  engineering.py
src/ufc_predictor/inference/: __init__.py  predict.py
src/ufc_predictor/pipeline/: __init__.py  run_pipeline.py
src/ufc_predictor/rating/: __init__.py  elo.py
