[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ufc-predictor"
version = "0.1.0"
description = "UFC fight outcome prediction using ELO ratings and machine learning"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "pyarrow>=12.0.0",  # for parquet support
    "xgboost>=2.0.0",
    "optuna>=3.0.0",
    "streamlit>=1.28.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",  # required for pd.read_html()
    "Pillow>=10.0.0",  # for image handling
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "ipykernel>=6.25.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py39"
